tools/tests/errors/unary_on_string.experr
does not support this unary operator
